--- a/cpu8080/cpu8080.vcxproj
+++ b/cpu8080/cpu8080.vcxproj
@@ -74,7 +74,7 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>x86</OutDir>
     <IntDir>intermediates</IntDir>
-    <TargetName>x86</TargetName>
+    <TargetName>i8080</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
