did some refactoring. added some instructions

--- a/cpu8080/cpu8080.vcxproj
+++ b/cpu8080/cpu8080.vcxproj
@@ -142,10 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="compiler.c" />
     <ClCompile Include="cpu8080.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="compiler.h" />
     <ClInclude Include="cpu8080.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
