--- a/cpu8080/cpu8080.vcxproj
+++ b/cpu8080/cpu8080.vcxproj
@@ -142,13 +142,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="compiler.c" />
-    <ClCompile Include="cpu8080.c" />
-    <ClCompile Include="main.c" />
+    <ClCompile Include="compiler.cpp" />
+    <ClCompile Include="CPU8080.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="compiler.h" />
-    <ClInclude Include="cpu8080.h" />
+    <ClInclude Include="CPU8080.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
