--- a/cpu8080/cpu8080.vcxproj.filters
+++ b/cpu8080/cpu8080.vcxproj.filters
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.c" />
-    <ClCompile Include="cpu8080.c" />
-    <ClCompile Include="compiler.c" />
+    <ClCompile Include="compiler.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="CPU8080.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cpu8080.h" />
     <ClInclude Include="compiler.h" />
+    <ClInclude Include="CPU8080.h" />
   </ItemGroup>
 </Project>
